<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TarkiGates</string>
    <string name="pref_levels">levels</string>
    <string name="resume">Reprendre</string>
    <string name="settings">Options</string>
    <string name="gotohome">Revenir au menu principal</string>
    <string name="loading">Chargement ...</string>
    <string name="pause">PAUSE</string>
    <string name="continuer">continuer</string>
    <string name="textClear">RÉESSAYEZ !</string>
    <string name="textBronze">MOYEN</string>
    <string name="textSilver">ASSEZ BIEN</string>
    <string name="textGold">BIEN JOUÉ !</string>
    <string name="nbclicks">Nombre de commutations</string>
    <string name="result">Résultat</string>
    <string name="doubleBackToExit">Cliquez à nouveau sur RETOUR pour quitter</string>

    <string name="informations">Créé par : Lionel JOUIN\nEtudiant à L\'IUT de Laval\n2015 - 2017
        \n\nMusique : Lou Angel Movie Music - RUSH (Video Game) Musique Reflexion Loop
        \n\nIcones : flaticon.com
    </string>
    <string name="rules">Regles</string>
    <string name="rulesText">Toutes les lumières du building se sont éteintes,
        votre objectif est de les rallumer grâce aux interrupteurs présents dans chaque niveau.
        \n\nLe courant passant à travers des portes logiques, votre objectif sera donc de trouver la bonne combinaison
        d\’état des interrupteurs afin de rétablir la lumière dans le building.</string>
    <string name="author">Auteur</string>
    <string name="gates">Les portes</string>
    <string name="s0">0</string>
    <string name="s1">1</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="and">A et B</string>
    <string name="or">A ou B</string>
    <string name="not">Non A</string>
    <string name="nand">A nand B</string>
    <string name="nor">A nor B</string>
    <string name="xor">A xor B</string>
    <string name="xnor">A xnor B</string>

    <string name="pref_settings">settings</string>
    <string name="pref_music">music</string>
    <string name="pref_soundEffects">soundEffects</string>
    <string name="pref_orientation">orientation</string>
    <string name="needRestart">L\'application a besoin de redémarrer pour appliquer certains paramètres</string>
    <string name="saved">Sauvegardé</string>
    <string name="upToDate">À jour</string>
    <string name="orientation">Orientation</string>
    <string name="music">Activer la musique</string>
    <string name="soundEffects">Activer les bruitages</string>
    <string name="reset">Réinitialiser les niveaux</string>
    <string name="hasBeenReset">Les niveaux ont été réinitialisés</string>
</resources>
