<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/informations"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/back"
                    android:id="@+id/back"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/infos"
                android:id="@+id/title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/mascotte"
                    android:id="@+id/mascotte" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/roof"
                android:background="@color/sillClear">
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="20dp"
                android:background="@color/building">
                <TextView
                    android:text="@string/author"
                    android:textSize="20sp"
                    android:textColor="@color/windowOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/informations"
                    android:textSize="17sp"
                    android:textColor="@color/windowOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/rules"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/windowOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:id="@+id/textView7"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/rulesText"
                    android:textSize="17sp"
                    android:textColor="@color/windowOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textAlignment="center" />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/iutlaval"
                        android:id="@+id/iut" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>